--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.86.0",
     "@vercel/analytics": "^1.5.0",
     "framer-motion": "^12.23.24",
     "html2canvas": "^1.4.1",
