paperless upload fixed but still has AI analyze naming behaviour

--- a/backend-unlocker/Dockerfile
+++ b/backend-unlocker/Dockerfile
@@ -1,4 +1,4 @@
-# Multi-stage build for Bank Statement Unlocker
+# Multi-stage build for Paperless Gateway Middleware
 FROM python:3.11-slim as base
 
 # Set environment variables
@@ -10,13 +10,20 @@ ENV PYTHONUNBUFFERED=1 \
 # Create app directory
 WORKDIR /app
 
-# Install dependencies
+# Install system dependencies (for PDF libraries)
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    libqpdf28 \
+    && rm -rf /var/lib/apt/lists/*
+
+# Install Python dependencies
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy application files
 COPY main.py .
-COPY passwords.txt .
+COPY static/ ./static/
+# Create passwords.txt if it doesn't exist (will be created on first run if needed)
+RUN touch passwords.txt
 
 # Create non-root user for security
 RUN useradd -m -u 1000 appuser && \
@@ -24,13 +31,13 @@ RUN useradd -m -u 1000 appuser && \
 
 USER appuser
 
-# Expose port (8080 for Cloud Run, 8001 for local)
+# Expose port
 EXPOSE 8001
 ENV PORT=8001
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-    CMD python -c "import requests; requests.get('http://localhost:8001/health')"
+    CMD python -c "import requests; requests.get('http://localhost:8001/health')" || exit 1
 
 # Run the application
 CMD uvicorn main:app --host 0.0.0.0 --port ${PORT}
